--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     },
     "include": [
         "src/**/*.ts",
-        "src/**/*.tsx"
+        "src/**/*.tsx",
+        "types/typings.d.ts"
     ]
 }
