--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@types/react": "^18.2.25",
     "@types/react-dom": "^18.2.10",
     "autoprefixer": "^10.4.16",
+    "axios": "^1.5.1",
+    "firebase": "^10.4.0",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
