--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "firebase-admin": "^11.11.0",
-    "nodemailer": "^6.9.5"
+    "nodemailer": "^6.9.5",
+    "socket.io": "^4.7.2"
   }
 }
