socket communication established

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
         "src/**/*.ts",
         "src/**/*.tsx",
         "types/typings.d.ts",
-        "src/app/store.js",
+        "src/store/store.js",
         "src/features/counterSlice.js"
     ]
 }
