--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://pregnancare.com",
+  "homepage": "https://pregnancare.com",
   "name": "pregnancare",
   "version": "0.1.0",
   "private": true,
