--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/google-maps-react": "^2.0.5",
     "@types/react": "^18.2.25",
     "@types/react-dom": "^18.2.10",
     "@types/react-redux": "^7.1.27",
     "autoprefixer": "^10.4.16",
     "axios": "^1.5.1",
     "firebase": "^10.4.0",
+    "google-maps-react": "^2.0.6",
     "leaflet": "^1.9.4",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
