--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/google-maps-react": "^2.0.5",
     "@types/react": "^18.2.25",
     "@types/react-dom": "^18.2.10",
+    "@types/react-lottie": "^1.2.9",
     "@types/react-redux": "^7.1.27",
     "autoprefixer": "^10.4.16",
     "axios": "^1.5.1",
