--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "firebase-admin": "^11.11.0",
+    "mysql": "^2.18.1",
     "nodemailer": "^6.9.5",
     "socket.io": "^4.7.2"
   }
